fixed images relative path

--- a/button-pseudo-classes.html
+++ b/button-pseudo-classes.html
@@ -291,7 +291,7 @@
         <button class="btn4">Click 4</button>
         <button class="btn5">Click 5</button>
         <article class="logo">
-            <img src="/img/bird.png" alt="ss" class="logo-image">
+            <img src=".bird.png" alt="ss" class="logo-image">
         </article>
     </div>
 </body>
