--- a/shadow.html
+++ b/shadow.html
@@ -89,7 +89,7 @@
       This is the second paragraph. It contains an <em>emphasized</em> element.
     </p>
     <h1>heading styling</h1>
-    <img src=".img_flowers.jpg" alt="placeholder" />
+    <img src="img_flowers.jpg" alt="placeholder" />
     <hr>
     <div class="outer">
       <div class="box">The inner box is 90% - 30px.</div>
