done work according to feedback

--- a/flex-box.html
+++ b/flex-box.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple HTML and CSS website showcasing various designs and layouts.">
+    <meta name="keywords" content="HTML, CSS, web design, responsive design, sticky header, media">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="flex-box.css">
     <title>Flex box </title>
 </head>
@@ -12,9 +17,9 @@
         <main>
            <div class="items"> content 1 </div>
            <div  class="items"> content 2 </div>
-           <div  class="items sideBar"> 
-            <div class="top">top</div>
-            <div  class="bottom">bottom</div>
+           <div  class="items side-bar flex-column"> 
+            <div class="side-bar-item">top</div>
+            <div  class="side-bar-item">bottom</div>
              </div>
         </main>
         <footer>Footer</footer>
