--- a/flex-box2.html
+++ b/flex-box2.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta property -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flex box 2</title>
+    <meta name="description" content="A simple HTML and CSS website showcasing various designs and layouts.">
+    <meta name="keywords" content="HTML, CSS, web design, responsive design, sticky header, media">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index, follow">
+    <!-- link property -->
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="flex-box2.css">
+     <title>flex box 2</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container flex-wrap ">
         <header class="header">Header</header>
-        <main class="main">
-           <div class="main1"> 
+        <main class="main flex-wrap ">
+           <div class="main-sub-container-1 flex-wrap"> 
             <div class="div1">content 1 </div>
             <div class="div2"> content 2 </div>
            </div>
 
-             <div  class="main2"> 
+             <div  class="main-sub-container-2 flex-column"> 
             <div class="top">top</div>
             <div  class="bottom">bottom</div>
             </div>
