--- a/flex-box5.html
+++ b/flex-box5.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple HTML and CSS website showcasing various designs and layouts.">
+    <meta name="keywords" content="HTML, CSS, web design, responsive design, sticky header, media">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index, follow">
     <title>flex box 2</title>
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="flex-box3.css">
 </head>
 <body>
     <div class="container">
         <header class="header">Header</header>
-        <main class="main">
-           <div class="main1"> 
+        <main class="main flex-wrap">
+           <div class="main-sub flex-wrap"> 
             <div class="div1">content 1 </div>
             <div class="div2"> content 2 </div>
            </div>
 
-             <div  class="main2"> 
+             <div  class="main-mid flex-column"> 
             <div class="top">top</div>
             <div  class="bottom">bottom</div>
             </div>
