--- a/flex-box6.html
+++ b/flex-box6.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple HTML and CSS website showcasing various designs and layouts.">
+    <meta name="keywords" content="HTML, CSS, web design, responsive design, sticky header, media">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index, follow">
     <title>flex box 4</title>
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="flex-box4.css">
 </head>
 <body>
@@ -12,10 +18,10 @@
         <nav>Nav</nav>  
         <main>
             <aside>Sidebar</aside>
-            <div class="main">
-                <div class="main1">
-                    <div class="div1">content 1 </div>
-                    <div class="div2">
+            <div class="main flex-column">
+                <div class="main-sub">
+                    <div class="div1 ">content 1 </div>
+                    <div class="div2 flex-wrap">
                         <div>1</div>
                         <div>2</div>
                         <div>3</div>
