--- a/shadow.html
+++ b/shadow.html
@@ -4,72 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A simple HTML and CSS website showcasing various designs and layouts.">
+    <meta name="keywords" content="HTML, CSS, web design, responsive design, sticky header, media">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="shadow.css">
   <title>Document</title>
-  <style>
-    h1 {
-      margin: 0;
-      padding: 20px 0;
-      color: #00539f;
-      text-shadow: 3px 3px 10px black;
-    }
-
-    img {
-      display: block;
-      margin: 0 auto;
-      max-width: 100%;
-    }
-
-    body {
-      font-family: sans-serif;
-    }
-
-    li[class] {
-      font-size: 120%;
-    }
-
-    li[class="a"] {
-      background-color: yellow;
-    }
-
-    li[class~="a"] {
-      color: red;
-    }
-
-    li em {
-      color: green;
-    }
-
-    h1+p {
-      font-size: 200%;
-    }
-
-    .outer {
-      border: 5px solid black;
-    }
-
-    .box {
-      padding: 10px;
-      width: calc(90% - 30px);
-      background-color: rebeccapurple;
-      color: white;
-    }
-
-    .box-1 {
-      margin: 30px;
-      width: 100px;
-      height: 100px;
-      background-color: rebeccapurple;
-      transform: rotate(0.8turn);
-      border-radius: 50%;
-      /* box-shadow: 10px 10px 10px black; */
-      position: relative;
-      top: 50px;
-      left: 50px;
-      z-index: 1;
-      transform: rotate(0.8turn);
-
-    }
-  </style>
+ 
 </head>
 
 <body>
